fix bug for mobile view

--- a/publications.html
+++ b/publications.html
@@ -102,9 +102,10 @@
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_cvpr.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Tangent Convolutions for Dense Prediction in 3D</h3>
@@ -114,13 +115,13 @@
 		<a href="http://vladlen.info/publications/tangent-convolutions-dense-prediction-3d/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Open3D: A Modern Library For 3D Data Processing</h3>
@@ -139,33 +140,32 @@
 		<a href="http://open3d.org/docs" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-book"></span> Tutorial
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_ras.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Real-time Head Pose Estimation using Multi-task Deep Neural Network</h3>
 		<p>Byungtae Ahn, Dong-Geol Choi, Jaesik Park, and In So Kweon<br>
 		Robotics and Autonomous Systems (<b>RAS</b>), 2018<br>
 		</p>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_pami.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Depth from a Light Field Image with Learning-based Matching Costs</h3>
 		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
 		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2018<br>
 		</p>
-		<p><br></p>
 	</div>
 </div>
 
@@ -175,9 +175,10 @@
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/17_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Colored Point Cloud Registration Revisited</h3>
@@ -193,13 +194,13 @@
 		<a href="publications/data/17_iccv_supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/17_siggraph.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction</h3>
@@ -212,13 +213,13 @@
 		<a href="publications/data/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/17_cgf.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Category‐Specific Salient View Selection via Deep Convolutional Neural Networks</h3>
@@ -228,7 +229,6 @@
 		<a href="http://rcv.kaist.ac.kr/v2/bbs/board.php?bo_table=rs_publications&wr_id=547" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
@@ -238,9 +238,10 @@
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_pami.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Robust Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
@@ -250,13 +251,13 @@
 		<a href="publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_eccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Fast Global Registration</h3>
@@ -269,13 +270,13 @@
 		<a href="https://github.com/IntelVCL/FastGlobalRegistration" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_ijcv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Refining Geometry from Depth Sensors using IR Shading Images</h3>
@@ -285,13 +286,13 @@
 		<a href="http://rcv.kaist.ac.kr/gmchoe/Project/Kinect_IR_IJCV/Published.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_cvpr_color.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Efficient and Robust Color Consistency for Community Photo Collections</h3>
@@ -301,13 +302,13 @@
 		<a href="publications/photoconsistency/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_cvpr_sm.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>High-quality Depth from Uncalibrated Small Motion Clip</h3>
@@ -317,13 +318,13 @@
 		<a href="https://sites.google.com/site/hyowoncv/ha_cvpr16" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_icra.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Vision System and Depth Processing for DRC-HUBO+</h3>
@@ -342,13 +343,13 @@
 		<a href="https://sites.google.com/site/kaistdrcdata/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-download-alt"></span> Data
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_tip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Multi-view Object Extraction with Fractional Boundaries,</h3>
@@ -361,7 +362,6 @@
 		<a href="publications/data/16_tip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
@@ -371,9 +371,10 @@
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/15_3dv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Dense Depth and Albedo from a Single-shot Structured Light,</h3>
@@ -386,13 +387,13 @@
 		<a href="publications/data/15_3dv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/15_cvpr_lf.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Accurate Depth Map Estimation from a Lenslet Light Field Camera</h3>
@@ -402,13 +403,13 @@
 		<a href="https://sites.google.com/site/hgjeoncv/home/depthfromlf_cvpr15" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/15_cvpr_pd.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines</h3>
@@ -418,7 +419,6 @@
 		<a href="https://sites.google.com/site/pedestrianbenchmark/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
@@ -428,9 +428,10 @@
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_tip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling and Completion for RGB-D Cameras</h3>
@@ -440,13 +441,13 @@
 		<a href="publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_accv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Real-time Head Orientation from a Monocular Camera using Deep Neural Network</h3>
@@ -459,13 +460,13 @@
 		<a href="publications/data/14_accv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_icip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>GMM-based Saliency Aggregation for Calibration-free Gaze Estimation</h3>
@@ -478,13 +479,13 @@
 		<a href="publications/data/14_icip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_cvpr_gm.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Exploiting Shading Cues in Kinect IR Images for Geometry Refinement</h3>
@@ -494,13 +495,13 @@
 		<a href="http://rcv.kaist.ac.kr/gmchoe/project/Kinect_IR/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_cvpr_cal.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Calibrating a Non-isotropic Near Point Light Source using a Plane</h3>
@@ -510,7 +511,6 @@
 		<a href="publications/lightcalib/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
@@ -520,9 +520,10 @@
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/13_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
@@ -532,7 +533,6 @@
 		<a href="publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
@@ -542,9 +542,10 @@
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/12_eccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement</h3>
@@ -560,13 +561,13 @@
 		<a href="publications/data/12_eccv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/12_icip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Modeling Photo Composition and Its Application to Photo Re-arrangement</h3>
@@ -582,13 +583,13 @@
 		<a href="publications/data/12_icip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/12_cvpr.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Identigram/Watermark removal using cross-channel correlation</h3>
@@ -598,7 +599,6 @@
 		<a href="publications/identigram/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
@@ -608,9 +608,10 @@
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/11_iros.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System</h3>
@@ -620,13 +621,13 @@
 		<a href="publications/data/11_iros.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
-<div class="row" style="height:200px">
+<div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/11_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling for 3D-TOF Cameras</h3>
@@ -636,7 +637,6 @@
 		<a href="publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<p><br></p>
 	</div>
 </div>
 
