--- a/publications.html
+++ b/publications.html
@@ -96,16 +96,18 @@
 
 <div class="container"> <!-- begin of publication list -->
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2018</h2>
 	</div>
 </div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_cvpr.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Tangent Convolutions for Dense Prediction in 3D</h3>
@@ -117,11 +119,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Open3D: A Modern Library For 3D Data Processing</h3>
@@ -142,11 +147,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_ras.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Real-time Head Pose Estimation using Multi-task Deep Neural Network</h3>
@@ -155,11 +163,14 @@
 		</p>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_pami.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Depth from a Light Field Image with Learning-based Matching Costs</h3>
@@ -168,17 +179,22 @@
 		</p>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2017</h2>
 	</div>
 </div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/17_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Colored Point Cloud Registration Revisited</h3>
@@ -196,11 +212,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/17_siggraph.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction</h3>
@@ -215,11 +234,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/17_cgf.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Category‐Specific Salient View Selection via Deep Convolutional Neural Networks</h3>
@@ -231,17 +253,22 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2016</h2>
 	</div>
 </div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_pami.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Robust Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
@@ -253,11 +280,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_eccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Fast Global Registration</h3>
@@ -272,11 +302,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_ijcv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Refining Geometry from Depth Sensors using IR Shading Images</h3>
@@ -288,11 +321,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_cvpr_color.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Efficient and Robust Color Consistency for Community Photo Collections</h3>
@@ -304,11 +340,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_cvpr_sm.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>High-quality Depth from Uncalibrated Small Motion Clip</h3>
@@ -320,11 +359,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_icra.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Vision System and Depth Processing for DRC-HUBO+</h3>
@@ -345,11 +387,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/16_tip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Multi-view Object Extraction with Fractional Boundaries,</h3>
@@ -364,17 +409,22 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2015</h2>
 	</div>
 </div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/15_3dv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Dense Depth and Albedo from a Single-shot Structured Light,</h3>
@@ -389,11 +439,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/15_cvpr_lf.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Accurate Depth Map Estimation from a Lenslet Light Field Camera</h3>
@@ -405,11 +458,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/15_cvpr_pd.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines</h3>
@@ -421,17 +477,22 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2014</h2>
 	</div>
 </div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_tip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling and Completion for RGB-D Cameras</h3>
@@ -443,11 +504,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_accv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Real-time Head Orientation from a Monocular Camera using Deep Neural Network</h3>
@@ -462,11 +526,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_icip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>GMM-based Saliency Aggregation for Calibration-free Gaze Estimation</h3>
@@ -481,11 +548,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_cvpr_gm.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Exploiting Shading Cues in Kinect IR Images for Geometry Refinement</h3>
@@ -497,11 +567,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/14_cvpr_cal.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Calibrating a Non-isotropic Near Point Light Source using a Plane</h3>
@@ -513,17 +586,22 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2013</h2>
 	</div>
 </div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/13_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
@@ -535,17 +613,22 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2012</h2>
 	</div>
 </div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/12_eccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement</h3>
@@ -563,11 +646,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/12_icip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Modeling Photo Composition and Its Application to Photo Re-arrangement</h3>
@@ -585,11 +671,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/12_cvpr.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>Identigram/Watermark removal using cross-channel correlation</h3>
@@ -601,17 +690,22 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2011</h2>
 	</div>
 </div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/11_iros.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System</h3>
@@ -623,11 +717,14 @@
 		</a>
 	</div>
 </div>
+<div class="row" style="height: 30px">
+</div>
+</div>
 
+<div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/11_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-		<p><br></p>
 	</div>
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling for 3D-TOF Cameras</h3>
@@ -638,6 +735,9 @@
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
 </div>
 
 </div>  <!-- end of publication list -->
