--- a/publications.html
+++ b/publications.html
@@ -397,7 +397,7 @@
 		<img src="publications/data/16_tip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
-		<h3>Multi-view Object Extraction with Fractional Boundaries,</h3>
+		<h3>Multi-view Object Extraction with Fractional Boundaries</h3>
 		<p>Seong-Heum Kim, Yu-Wing Tai, Jaesik Park, and In So Kweon<br>
 		IEEE Transaction on Image Processing (<b>TIP</b>), 2016<br>
 		</p>
@@ -427,7 +427,7 @@
 		<img src="publications/data/15_3dv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
-		<h3>Dense Depth and Albedo from a Single-shot Structured Light,</h3>
+		<h3>Dense Depth and Albedo from a Single-shot Structured Light</h3>
 		<p>Hyowon Ha, Jaesik Park, and In So Kweon<br>
 		International Conference on 3D Vision (<b>3DV</b>), 2015<br>
 		</p>
